se utiliza version tolist de java 17